# SocketPong

./: .gitignore  build.sh  run.sh
Client/: CMakeLists.txt  main.cpp
Client/src/: main.cpp
Client/src/application/: application.cpp  application.h
Client/src/application/ui/: ui.cpp  ui.h
Client/src/game/: ball.cpp  ball.h  paddle.cpp  paddle.h
